# fb-photo-uploader

./: .gitignore  README.md  pyproject.toml
src/fb_photo_uploader/: __init__.py  api_client.py  cli.py  models.py  uploader.py  utils.py
tests/: __init__.py  conftest.py  test_api_client.py  test_cli.py  test_uploader.py  test_utils.py
